[package]
name = "rust_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.0"
gdk = "0.18.0"

[build-dependencies]
gtk = "0.18.0"
cargo-pack = "0.6.0"

[tasks.build]
command = "cargo"
args = ["build"]

[tasks.release]
command = "cargo"
args = ["build", "--release"]